--- a/WinConsole/WinConsole.csproj
+++ b/WinConsole/WinConsole.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
-    <Version>2024.0603.0804.21</Version>
+    <Version>2024.0603.1317.52</Version>
     <Nullable>disable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
     <RootNamespace>WinConsole</RootNamespace>
@@ -50,5 +50,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.106" />
   </ItemGroup>
 </Project>
